--- a/terraform/etl/09-child-fam-service-spreadsheet-imports.yaml
+++ b/terraform/etl/09-child-fam-service-spreadsheet-imports.yaml
@@ -3,23 +3,23 @@
 
 # Structure of the file:
   # TEMPLATE - Copy this section and modify:
-  # - name: "your_import_name"           # Unique name (letters, numbers, underscores only)
-  #   google_drive_document_id: "PASTE_DOCUMENT_ID_HERE"
+  # - google_drive_document_id: "PASTE_DOCUMENT_ID_HERE"
   #   input_file_name: "YourFolder/your_file.csv"
   #   worksheet_name: "Sheet1"           # Name of the tab/sheet in the spreadsheet
   #   header_row_number: 0               # 0 = first row has headers, 1 = second row, etc.
+  #   table_name: "my_custom_table"      # Optional: custom table name (overrides default)
   #   ingestion_schedule: "cron(0 2 * * ? *)"  # Optional: custom schedule, defaults to 2 AM UTC daily
 # =======================================================
 
 spreadsheets:
-  - name: "newlyn_weekly"
-    google_drive_document_id: "1If-AGk_htDmbCtsiXdBz6qwseAoF7Yyr"
+  - google_drive_document_id: "1If-AGk_htDmbCtsiXdBz6qwseAoF7Yyr"
     input_file_name: "Newlyn_Weekly_Data/newlyn_12_09_2025.csv"
     worksheet_name: "Newlyn_Weekly_Data"
     header_row_number: 0
+    table_name: "newlyn_custom_table"     # Custom table name example
 
-  - name: "whyte_weekly"
-    google_drive_document_id: "1-RGssHGSKGpis4Bode6Iw9e6lStnM5TR"
+  - google_drive_document_id: "1-RGssHGSKGpis4Bode6Iw9e6lStnM5TR"
     input_file_name: "Whyte_Weekly_Data/whyte_10_09_2025.csv"
     worksheet_name: "Whyte_Weekly_Data"
     header_row_number: 0
+    table_name: "whyte_custom_table"     # Custom table name example
